<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Odd One Out</string>
    <string name="test_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="waiting_banner_ad_unit_id" translatable="false">ca-app-pub-7008637445039253/7155259736</string>
    <string name="game_banner_ad_unit_id" translatable="false">ca-app-pub-7008637445039253/3012497027</string>

    <string name="ads_mod_app_id" translatable="false">ca-app-pub-7008637445039253~6033749759</string>
    <string name="test_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="string_welcome">Welcome to</string>
    <string name="email" translatable="false">spyfallmobile@gmail.com</string>
    <string name="string_btn_rules">Rules</string>

    <string name="okay">Okay</string>
    <string name="update_message">Please update to the newest version to keep the fun going.</string>
    <string name="update_title">We\'ve made some changes</string>

    <!--Dialogs-->
    <string name="positive_action_standard">Okay</string>
    <string name="negative_action_standard">Cancel</string>

    <string name="dialog_rate_negative">Maybe Later</string>
    <string name="dialog_rate_positive" translatable="false">Of Course!</string>


    <string name="leave_action_positive">Leave</string>
    <string name="leave_action_negative">Stay</string>

    <string name="unknown_error" translatable="false">We are Sorry. Something went wrong and we are not quite sure what. Please feel free to email us from the settings page. </string>

    <string name="error_title">Something went wrong</string>
    <string name="newtork_error_message">Please check your internet connection and try again</string>

    <string name="waiting_leaving_title">Leaving Game</string>

    <string name="about_title">About</string>

    <string name="rules_title">Rules</string>
    <string name="rules_message"> • Spyfall is a game best played with 3 or more players. \n • Once the game starts a
        location such as “pirate ship” or “library is chosen”. \n • Everyone is made aware of the location and assigned
        a role at the location. Everyone except for the player randomly assigned to be the spy that is. \n • Starting with
        the player assigned to be first, each player takes turns asking each other questions that only someone who is
        not the spy would know such as “ Is this a place you would bring your family? “ \n • The players goals are to find
        out who the spy is, and also make sure the spy does not find out what the location is. \n • The spy’s goal is to not
        get found out as the spy, and to find out what the location is. \n • When the timer is up, everyone votes on who
        they think the spy is. \n • The spy then reveals themselves, and votes on what they think the location is.\n •  If the
        spy gets the location right, the spy wins. Otherwise, everyone who guesses the spy correctly wins.  \n • Have fun! </string>

    <string name="ads_title">Remove Ads?</string>
    <string name="remove_ads_message">To remove ads, please upgrade to the premium version of Spyfall</string>
    <string name="ads_positive_action">Upgrade</string>

    <string name="theme_change_title">Change Theme</string>
    <string name="theme_change_message">Choose your new theme</string>
    <string name="theme_change_positive">Change</string>
    <string name="theme_change_error">No color was selected</string>

    <!--Settings-->
    <string name="string_content_description_settings">Settings Button</string>
    <string name="string_settings">Settings</string>
    <string name="string_theme">Theme</string>
    <string name="string_ads">Ads</string>
    <string name="change_theme_random_colors">Random Colors</string>

    <!--New Game-->
    <string name="string_btn_new_game">New Game</string>
    <string name="string_packs">Packs</string>
    <string name="string_new_game">New Game</string>
    <string name="string_pick_a_time_limit">Pick a time limit:</string>
    <string name="string_choose_packs">Choose packs:</string>
    <string name="string_time_limit">Time limit must be 10 minutes or less</string>
    <string name="string_btn_create">Create</string>
    <string name="new_game_error_select_pack">Please select a pack</string>
    <string name="new_game_string_error_name">please enter a name</string>
    <string name="new_game_error_time_limit">please enter a time limit between 1 and 10 minutes</string>
    <string name="string_pack_description">Choose your packs to be included in the game. One location will be chosen at
        random from the selected packs when the game starts.
    </string>
    <string name="string_name_game_name_hint"><u>Username</u></string>


    <!--Join Game-->
    <string name="string_join_game">Join Game</string>
    <string name="string_enter_access_code">Enter an access code:</string>
    <string name="string_enter_username">Enter a username:</string>
    <string name="join_game_error_fields">Please fill out both access code and username</string>
    <string name="join_game_error_max_players">Sorry, the max for a game is currently 8 players</string>
    <string name="join_game_error_started_game">Sorry, this game has been started</string>
    <string name="join_game_error_taken_name">Sorry, that name is taken by another player</string>
    <string name="join_game_error_access_code">Sorry, no game was found with that access code</string>
    <string name="join_game_error_could_not_join" translatable="false">Sorry, this game could not be joined</string>

    <string name="string_join_access_hint"><u>Access code</u></string>
    <string name="string_join_name_hint"><u>Enter a username</u></string>

    <!--Waiting -->
    <string name="change_name_character_limit">please enter a name between 1 and 25 characters</string>
    <string name="string_change_name_hint"><u>Enter a username</u></string>
    <string name="string_waiting">Waiting for players…</string>
    <string name="string_access_code">Access code:</string>
    <string name="leave_game_error_game_started" translatable="false">Were sorry, you cannot leave the game when it has already been started</string>

    <string name="change_name_error_started_game" translatable="false">Sorry, cannot change name after game has been started</string>


    <!--Game-->
    <string name="end_game_message">Are you sure you want to end the game?</string>
    <string name="end_game_positive_action">End</string>
    <string name="leave_game_title">Leaving Game?</string>
    <string name="leave_in_game_message">If you chose to leave, the game will end</string>
    <string name="string_btn_end_game">End Game</string>
    <string name="string_btn_play_again">Play Again</string>
    <string name="string_game_players">Players:</string>
    <string name="string_game_locations">Locations:</string>
    <string name="string_locations">Locations</string>
    <string name="string_hide">Hide</string>
    <string name="string_show">Show</string>
    <string name="start_game_unknown_error" translatable="false">We are sorry there was an unknown error starting the game. Please try again.</string>
    <string name="play_again_unknown_error" translatable="false">We are sorry there was an unknown error resetting the game to play again. Please try again.</string>
    <string name="start_game_started_error" translatable="false">Sorry, it looks like someone else has already started the game. It may be loading.</string>


    <!--SHARED PREFERNCES-->
    <string name="shared_preferences_color" translatable="false">SHARED_PREFERENCES_COLOR</string>
    <string name="shared_preferences" translatable="false">SPYFALL_SHARED_PREFERNCES</string>
    <string name="shared_preferences_games" translatable="false">>SHARED_PREFERENCES_GAMES</string>
    <string name="shared_preferences_hasReviewed" translatable="false">>SHARED_PREFERENCES_HAS_REVIEWED</string>
    <string name="shared_preferences_test_db" translatable="false">>SHARED_PREFERENCES_TEST_DB</string>
    <string name="shared_preferences_session_code" translatable="false">>SHARED_PREFERENCES_SESSION_CODE</string>
    <string name="shared_preferences_session_current_user" translatable="false">>SHARED_PREFERENCES_SESSION_USER</string>
    <string name="shared_preferences_session_previous_user" translatable="false">>SHARED_PREFERENCES_SESSION_PREV_USER</string>


    <string name="string_btn_leave_game">Leave Game</string>
    <string name="string_btn_start_game">Start Game</string>
    <string name="dialog_rate_title">Like the game?</string>
    <string name="dialog_rate_message">Pretty please let us know by giving us a review :)</string>
    <string name="waiting_leaving_message" tools:ignore="ExtraTranslation">Are you sure you want to leave?</string>
    <string name="email_subject" translatable="false">a comment from me</string>
    <string name="about_message">Spyfall is a board game originally published by Hobby World. This mobile adaptation of
        the board game is developed and maintained by Josiah Rininger (iOS) and Elijah Dangerfield (Android). Any
        questions or concerns may be sent here:
    </string>
    <string name="change_name_different_name">please enter a name that is not in the game</string>
    <string name="change_name_title">Change Name</string>
    <string name="end_game_title">Ending the game</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="use_test_db" translatable="false">Use Test DB</string>
    <string name="off" translatable="false">Off</string>
    <string name="on" translatable="false">On</string>
    <string name="tester_settings" translatable="false">Tester Settings</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="name_change_end_game" translatable="false">We are sorry. We had to end the game due to a name change, please try again.</string>
    <string name="enter_previous_game" translatable="false">Enter previous game?</string>
    <string name="enter_previous_game_message" translatable="false">Looks like you were found in a game, would you like to pick up where you left off?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
