<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

    <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/string_content_description_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_gear" />

    <LinearLayout
            android:id="@+id/welcome_message"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="@string/string_welcome"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="36sp"
                android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:ellipsize="none"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="62sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />
    </LinearLayout>

    <Button
            android:id="@+id/btn_new_game"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button_primary"
            android:text="@string/string_btn_new_game"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_join_game"
            app:layout_constraintEnd_toEndOf="@+id/btn_join_game"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_join_game" />

    <Button
            android:id="@+id/btn_join_game"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/background_button_accent"
            android:text="@string/string_join_game"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_rules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/iv_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_legacy"
            app:layout_constraintBottom_toBottomOf="@+id/btn_rules"
            app:layout_constraintEnd_toStartOf="@+id/btn_rules"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btn_join_game"
            app:layout_constraintTop_toBottomOf="@+id/btn_join_game" />

    <Button
            android:id="@+id/btn_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/string_btn_rules"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_new_game"
            app:layout_constraintStart_toEndOf="@id/iv_rules" />

</androidx.constraintlayout.widget.ConstraintLayout>
