<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/join_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true" android:background="@color/colorBackgroundLight" android:focusable="true">

    <Button
            android:text="@string/string_btn_join_game"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btn_join_game_action"
            android:background="@drawable/background_button_accent"
            android:textColor="@android:color/white"
            android:layout_marginEnd="42dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="42dp"
            app:layout_constraintStart_toStartOf="parent" android:textAllCaps="false" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_access_code" app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:text="@string/string_join_game"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="36sp"
            android:textColor="@android:color/black" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView4" android:layout_marginTop="42dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tv_access_code"
            android:hint="@string/string_join_access_hint" android:background="@drawable/back_ground_edit_text"
            android:paddingStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintEnd_toEndOf="@+id/tv_username" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tv_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/string_join_name_hint"
            android:background="@drawable/back_ground_edit_text" app:layout_constraintHorizontal_bias="0.0"
            android:paddingStart="8dp" android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginEnd="24dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_join_game" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_join_game_action"
            app:layout_constraintStart_toStartOf="@+id/btn_join_game_action"
            app:layout_constraintEnd_toEndOf="@+id/btn_join_game_action" android:visibility="invisible"/>
    <TextView
            android:text="@string/string_enter_access_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/tv_username"
            android:textColor="@android:color/black"
            android:textStyle="bold" android:textSize="24sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"/>
    <TextView
            android:text="@string/string_enter_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textColor="@android:color/black"
            android:textStyle="bold" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>


</androidx.constraintlayout.widget.ConstraintLayout>