<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/btn_clean_db"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_button_accent"
            android:text="Clean DB"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:text="@string/tester_settings"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/rg_test_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

        <RadioButton
                android:id="@+id/rb_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on" />

        <RadioButton
                android:id="@+id/rb_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/off" />
    </RadioGroup>

    <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/use_test_db"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ProgressBar
            android:id="@+id/pb_clean_db"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_clean_db"
            app:layout_constraintEnd_toEndOf="@+id/btn_clean_db"
            app:layout_constraintStart_toStartOf="@+id/btn_clean_db"
            app:layout_constraintTop_toTopOf="@+id/btn_clean_db" />

</androidx.constraintlayout.widget.ConstraintLayout>